operators/templates/namespace.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: rhbk-operator
---
apiVersion: v1
kind: Namespace
metadata:
  name: rhbk-operator
---
