operators/templates/path-operator.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: patch-operator
  annotations:
    argocd.argoproj.io/sync-wave: "1"
